sources/research_inbox/20260112_125049_2nd_research/10_raw/vibe-mcp-flex-router-node 説明書 (2).txt
________________


vibe-mcp-flex-router-node 説明書
1. これは何？
目的：
Claude Code / Antigravity / 各種IDE/CLI から使えるように、MCP（Model Context Protocol）サーバーをWindows上で安定運用するための一式です。
このプロジェクト（vibe-mcp-flex-router-node）は、MCPサーバーとして以下を提供します：
* llm_chat：Gemini / Z.ai を OpenAI互換エンドポイント経由で呼び出す（ルータ）
* llm_health：設定・鍵の有無・キャッシュ状況などのヘルス確認（秘密情報は出さない）
* llm_cache_clear：プロセス内キャッシュをクリア
さらに、MCP Inspector（検査UI/CLI）で接続確認・ツール実行ができます。
________________


2. フォルダとファイル（このスレッドで作ったもの）
フォルダ
* C:\Users\koji2\Desktop\vibe-mcp-flex-router-node\
→ 本体（ここだけで完結）
* C:\Users\koji2\Desktop\Start_VIBE_MCP_Inspector.cmd
→ デスクトップからワンクリック起動する入口（中身は run-inspector-safe.cmd を呼ぶだけ）
主要ファイル（プロジェクト内）
   * server.mjs
MCPサーバー本体。stdout汚染（JSON破壊）対策として、ログをstderrへ逃がすようにしてあるのが重要。
   * verify_stdio.mjs
MCPがSTDIOで正しく返すかの自動検査（JSONが壊れていないかを確認）。
   * run-inspector-safe.cmd
事故りやすい点（白画面・2タブ・起動順・Chrome初回ログイン誘導など）を避けるための安全起動スクリプト。
ポート待機（ポーリング）で、Inspectorが起動してからブラウザを開く。
   * run-inspector.cmd
安全版へ誘導するラッパー（古い版を踏んでも安全版が動くようにする）。
   * run-server.cmd
サーバー単体起動（Inspectorを使わず起動する場合用）。
   * Start_VIBE_MCP_Inspector.cmd（プロジェクト内にもある場合あり）
デスクトップへコピーして使う用（あなたのデスクトップには既に置いてある）。
   * README.md
英語＋日本語ガイド（初心者手順あり）。
   * .env.example / .env
APIキーなどの設定。
   * .gitignore
.env やログ、Chromeプロファイル等がGit事故で入らないようにする。
   * .mcp.json.example
Claude Code等へ登録するためのテンプレ。
________________


3. MCP Inspector って何？（超重要）
**MCP Inspector は「MCPサーバーをテストするための公式検査ツール」**です。
構造としては、起動すると内部的に2つ動きます：(GitHub)
      * MCPI（UI）：ブラウザで見る画面（デフォルト http://localhost:6274）
      * MCPP（Proxy）：UIとMCPサーバーをつなぐ橋渡し（デフォルト localhost:6277）
ポートはこの2つがセットです（6274=UI / 6277=Proxy）。(GitHub)
セキュリティ（ここだけ必読）
Inspectorは「ローカルのプロセスを起動できる」ため、外部に公開すると危険です。
      * 既定では localhost にしかバインドされない（安全寄り）(GitHub)
      * Proxyには セッショントークン認証が付く（通常）(GitHub)
      * さらにリスク情報として脆弱性の注意喚起もされています（CVE言及あり）。(GitHub)
あなたの運用では、ローカル限定で使う前提で DANGEROUSLY_OMIT_AUTH=true を使うことがありますが、
社内LANや外部公開では絶対に使わないでください（ローカル専用の時だけ）。
________________


4. 最短の使い方（初心者向け：ここだけ）
4.1 初回セットアップ（1回だけ）
      1. PowerShellでプロジェクトへ移動
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"


      2. 依存関係インストール
npm install


      3. .env.example を .env にコピーして、APIキーを入れる
      * GEMINI_API_KEY=...
      * ZAI_API_KEY=...
（※キーが空でも llm_health は動くことがありますが、llm_chat が失敗します）
________________


4.2 壊れてないか検査（毎回これが最強）
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npm run verify:stdio


これが PASS して 3 tools が出れば「サーバー側は正常」です。
________________


4.3 起動（デスクトップから）
デスクトップのこれをダブルクリック：
      * Start_VIBE_MCP_Inspector.cmd
中身はあなたのログ通り：
cd /d "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
call run-inspector-safe.cmd


安全版は、次を狙ってます：
      * 余計な自動ブラウザオープンを止める（2タブ事故を防ぐ）
      * ポートがLISTENINGになってからブラウザを開く（Connection refused防止）
      * Chrome/Edgeの検出、プロファイル運用で白画面/ログイン誘導を減らす
      * Inspector起動時に server.mjsへ自動接続させて、UI入力を不要にする
________________


5. MCP Inspector（UI）の使い方（細かめ）
5.1 UIで何をする？
UIでは主にこれをします：
      1. 接続設定（Configuration）
      2. Tools（ツール一覧）を見る
      3. Toolを実行して結果を見る
      4. 必要なら mcp.json をエクスポートしてClaude Code等へ登録
Inspector UIには、設定をコピーしやすい「Server Entry / Servers File」的なエクスポート機能があります（mcp.json形式へ）。(GitHub)
________________


5.2 「ログイン画面が出る」について
あなたが嫌がっていた「Chromeのログイン誘導・初回画面」は、ブラウザ側の挙動です。
対策としてスクリプト側で：
      * 専用プロファイルを使う
      * 初回誘導を抑えるフラグを付ける
などを入れています。
それでも出る場合は、専用プロファイルを一度消して作り直すのが効きます（ローカルだけ）。
※削除先はスクリプト内の --user-data-dir=... の場所です。
________________


5.3 「UIが白くなる」について
InspectorはUI側に不具合が出ることがあり、ツール一覧クリック等で画面が空白になる報告が実際にあります。(GitHub)
この場合でも、
         * npm run verify:stdio が PASS
         * inspector --cli で tools/call が成功
なら、サーバーは正常で、UI側の問題です。
________________


6. MCP Inspector（CLI）の使い方（UIが壊れてもこれで最終確認できる）
Inspectorは CLIモードが公式にあります。(GitHub)
6.1 ツール一覧
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/list


6.2 ヘルスチェック（あなたが成功したやつ）
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/call --tool-name llm_health


6.3 llm_chat（E2E確認）
例：Geminiでテスト
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/call --tool-name llm_chat --tool-arg provider=gemini --tool-arg purpose=general --tool-arg prompt="こんにちは。1文で自己紹介して。"


例：Z.aiでテスト
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/call --tool-name llm_chat --tool-arg provider=zai --tool-arg purpose=general --tool-arg prompt="こんにちは。今日のタスクを3つ提案して。"


※CLIモードの --method tools/list / --method tools/call / --tool-name / --tool-arg はInspector側で正式に例示されています。(GitHub)
________________


7. よくある詰まりポイント（このスレッドで潰した地雷）
7.1 npm install が C:\Users\koji2\package.json を探して死ぬ
原因：フォルダ移動してない（Homeでnpm叩いてる）
正解：
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npm install


________________


7.2 SyntaxError: Unexpected end of JSON input
原因：STDIOが汚れた（stdoutにログ/文字が混ざるとJSON-RPCが壊れる）
対策（既に反映済み）：
         * server.mjs の console.log/info を stderrに逃がす
         * サーバー起動中のウィンドウに何も入力しない（手入力がSTDIOを壊す）
________________


7.3 Inspectorで2つタブが開く / ERR_CONNECTION_REFUSED
原因：Inspectorが自動で開く＋スクリプトでも開く、または 起動前にブラウザを開いてしまう
対策：
         * MCP_AUTO_OPEN_ENABLED=false を使う（Inspectorの自動オープン停止）(GitHub)
         * ポートがLISTENINGになるまで待ってから開く（ポーリング）
________________


7.4 Proxy Authentication Required（トークン要求）
通常のInspectorは セッショントークンを要求します。(GitHub)
         * コンソールにトークンが出る
         * URLに ?MCP_PROXY_AUTH_TOKEN=... を付けて開ける (GitHub)
         * もしくは設定画面（Configuration）に入れる (GitHub)
ローカル専用で簡単にしたい時だけ DANGEROUSLY_OMIT_AUTH=true を使う（ただし危険なので外に出さない）。
________________


7.5 UIが白くなる
Inspector UI側の不具合報告が実在します。(GitHub)
この場合は CLIでE2E確認するのが最短です（上の6章）。
________________


8. 「完成した？」の結論（判定基準）
あなたのログ上、これは 完成判定OKです：
         * npm run verify:stdio が PASS し、toolsが3つ返る
         * --cli --method tools/call --tool-name llm_health が成功して、keySet:true も確認できている
         * netstat -ano | findstr ":6274" が LISTENING
つまり、
         * MCPサーバーは正常
         * Inspectorは動作
         * UIに揺れがあっても CLIで確実に検証可能
________________


9. 次にやるべき「最終E2Eチェック」（5分で終わる）
         1. .env に APIキーが入っている前提で
         2. CLIで llm_chat をGeminiとZ.ai両方に投げる
         3. 返答が返れば「実運用OK」
Gemini：
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/call --tool-name llm_chat --tool-arg provider=gemini --tool-arg prompt="テストです。OKならOKとだけ返して。"


Z.ai：
cd "C:\Users\koji2\Desktop\vibe-mcp-flex-router-node"
npx -y @modelcontextprotocol/inspector --cli -- node server.mjs --method tools/call --tool-name llm_chat --tool-arg provider=zai --tool-arg prompt="テストです。OKならOKとだけ返して。"


________________


10. AI/IDE（Claude Code等）に渡すための「要点メモ」
         * このMCPサーバーは stdio型で起動する（command: node, args: [server.mjs]）
         * Inspector UIは 6274、Proxyは 6277（デフォルト）(GitHub)
         * InspectorはCLIモードで tools/list tools/call が叩ける (GitHub)
         * セキュリティ的に、InspectorのProxyは外部公開しない（localhost限定推奨）(GitHub)
         * UIが不安定な時は CLIで検証（UI不具合報告あり）(GitHub)
________________


付録：PowerShellでよくある勘違い（あなたのログに出たやつ）
^ は cmd.exe の改行継続で、PowerShellでは意味が違います。
PowerShellでは 1行で書くか、どうしても改行したいなら バッククォート（`） を使います。
________________


必要なら、あなたの「最終成果物の説明書」に加えて、次のも作れます（どれもテキストで渡せます）：
         * Claude Code / Antigravity 用の MCP登録手順（クリック場所まで）
         * “初心者が絶対事故らない運用チェックリスト（毎回やること3つ）”
         * “トラブル時の復旧コマンドだけ” 超短縮版
どれを優先で入れる？（迷うなら「チェックリスト」を先に作るのが一番効きます）